@@ -1,12 +1,12 @@
 Syscall param close_range(first) contains uninitialised byte(s)
    at 0x........: close_range (in /...libc...)
-   by 0x........: main (close_range.c:89)
+   by 0x........: main (close_range.c:92)
 
 Syscall param close_range(last) contains uninitialised byte(s)
    at 0x........: close_range (in /...libc...)
-   by 0x........: main (close_range.c:89)
+   by 0x........: main (close_range.c:92)
 
 Syscall param close_range(flags) contains uninitialised byte(s)
    at 0x........: close_range (in /...libc...)
-   by 0x........: main (close_range.c:89)
+   by 0x........: main (close_range.c:92)
 
