@@ -5,6 +5,8 @@ Branch 3.25
 
 The following bugs have been fixed or resolved on this branch.
 
+503641  close_range syscalls started failing with 3.25.0
+
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
 where XXXXXX is the bug number as listed above.
